--- a/guia-hoteles/index.html
+++ b/guia-hoteles/index.html
@@ -7,16 +7,47 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
-
-    <title>Hello, world!</title>
-  </head>
-  <body>
-    <h1>Hello, world!</h1>
-
-    <!-- Optional JavaScript -->
+        <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="node_modules/jQuery/dist/jQuery.min.js"></script>
     <script src="node_modules/Popper.js/dist/jQuery.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+
+    <title>Hoteles</title>
+  </head>
+  <body>
+
+  <div class="jumbotron">
+  	<h1> Hoteles </h1>
+  </div>
+    	<div class="container">
+  		<div class="row">
+    		<div class = "col-md-4" offset="col-md-4">
+    			<h1> Título 1 </h1>
+    			<p> Descripción 1</p>
+    			<button> Botón 1</button>
+    		</div>
+    		<br>
+    		<div class = "col-md-4" offset="col-md-4">
+    			<h1> Título 2</h1>
+    			<p> Descripción 2</p>
+    			<button> Botón 2</button>
+    		</div>
+    		<br>
+    		<div class = "col-md-4" offset="col-md-4">
+    			<h1> Título 3</h1>
+    			<p> Descripción 3</p>
+    			<button> Botón 3</button>
+    		</div>
+    	</div>
+  	</div>
+
+
+
+    <div class="container">
+
+    </div>
+
+
   </body>
 </html>
