--- a/guia-hoteles/index.html
+++ b/guia-hoteles/index.html
@@ -7,41 +7,141 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
-        <!-- Optional JavaScript -->
+    <link rel="stylesheet" href="css/main.css">
+    <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="node_modules/jQuery/dist/jQuery.min.js"></script>
     <script src="node_modules/Popper.js/dist/jQuery.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 
-    <title>Hoteles</title>
+    <title>Guía Hoteles</title>
   </head>
   <body>
 
   <div class="jumbotron">
   	<h1> Hoteles </h1>
   </div>
-    	<div class="container">
+
+ <div class="container">
   		<div class="row">
-    		<div class = "col-md-4" offset="col-md-4">
-    			<h1> Título 1 </h1>
-    			<p> Descripción 1</p>
-    			<button> Botón 1</button>
+    		<div class = "col-sm-4">
+    			<p> 
+    				<h3>¿Cómo funciona?</h3>
+    				<p>Buscá los hoteles de acuerdo a tu preferencia. </p>
+    			</p>
     		</div>
-    		<br>
-    		<div class = "col-md-4" offset="col-md-4">
-    			<h1> Título 2</h1>
-    			<p> Descripción 2</p>
-    			<button> Botón 2</button>
+    		<div class = "col-sm-4">
+    			<p> 
+    				<h3>¿Dónde puedo reservar?</h3>
+    				<p>Elegí la ciudad que te interese y luego realizá la reserva
+    				con tus datos. </p>
+    			</p>
     		</div>
-    		<br>
-    		<div class = "col-md-4" offset="col-md-4">
-    			<h1> Título 3</h1>
-    			<p> Descripción 3</p>
-    			<button> Botón 3</button>
+    		<div class = "col-sm-4">
+    			<p> 
+    				<h3>¿Cómo pago?</h3>
+    				<p>Utilizá tu tarjeta favorita. </p>
+    			</p>
     		</div>
     	</div>
-  	</div>
+ 
 
+  	<hr>
+
+
+  		<div class="d-flex flex-wrap flex-row-reverse">
+    		<div class = "card-hotel d-flex flex-column justify-content-between">
+    			<div>
+    			<h4> Hotel Barcelona </h4>
+    			<p> Hotel ubicado en pleno centro de Barcelona a pocos metros de la playa.</p>
+    			</div>
+    			<div>
+    			<button class="btn btn-dark btn-reserva"> Reservar </button>
+    			</div>
+    		</div>
+    		<div class = "card-hotel d-flex flex-column justify-content-between">
+    			<div>
+    			<h4> Hotel Buenos Aires </h4>
+    			<p> Hotel ubicado en pleno centro.</p>
+    			</div>
+    			<div>
+    			<button class="btn btn-dark btn-reserva"> Reservar </button>
+    			</div>
+    		</div>
+    		<div class = "card-hotel d-flex flex-column justify-content-between">
+    			<div>
+				<h4> Hotel Lima </h4>
+    			<p> Hotel ubicado en pleno centro.</p>
+    			</div>
+    			<div>
+    			<button class="btn btn-dark btn-reserva"> Reservar </button>
+    			</div>
+    		</div>
+    		<div class = "card-hotel d-flex flex-column justify-content-between">
+    			<div>
+				<h4> Hotel Río de Janeiro </h4>
+    			<p> Hotel ubicado en pleno centro de Río de Janeiro a pocos metros de la playa.</p>
+    			</div>
+    			<div>
+    			<button class="btn btn-dark btn-reserva"> Reservar </button>
+    		</div>
+    		</div>
+    		 <div class = "card-hotel d-flex flex-column justify-content-between">
+    		 	<div>
+				<h4> Hotel La Paz</h4>
+    			<p> Hotel ubicado en pleno centro.</p>
+    		</div>
+    		<div>
+    			<button class="btn btn-dark btn-reserva"> Reservar </button>
+    		</div>
+    		</div>
+    		<div class = "card-hotel d-flex flex-column justify-content-between">
+    			<div>
+				<h4> Hotel Madrid</h4>
+    			<p> Hotel ubicado en pleno centro.</p>
+    		</div>
+    		<div>
+    			<button class="btn btn-dark btn-reserva"> Reservar </button>
+    		</div>
+    		</div>
+    		<div class = "card-hotel d-flex flex-column justify-content-between">
+    			<div>
+				<h4> Hotel San Pablo</h4>
+    			<p> Hotel ubicado en pleno centro.</p>
+    		</div>
+    		<div>
+    			<button class="btn btn-dark btn-reserva"> Reservar </button>
+    		</div>
+    		</div>
+    	</div>
+</div>
+
+<footer>
+	<div class="row">
+	<div class="col-sm-4 d-flex flex-column">
+		<a href="https://www.facebook.com">Facebook</a>
+		<a href="https://www.twitter.com">Twitter</a>
+		<a href="https://www.instagram.com">Instagram</a>
+		<a href="https://www.google.com">Google+</a>
+	</div>
+
+	<div class="col-sm-4">
+		<address>
+			<h3>Oficina Central </h3>
+			<p>Tucumán 834, CABA, Argentina</p>
+			<p>+549111234567</p>
+			<p>contacto@guiahoteles.com</p>
+		</address>
+	</div>
+
+	<div class="col-sm-4 d-flex flex-column align-items-end">
+		<a href="https://www.facebook.com">Nosotros</a>
+		<a href="https://www.twitter.com">Precios</a>
+		<a href="https://www.instagram.com">Términos y condiciones</a>
+		<a href="https://www.google.com">Contacto</a>	
+	</div>
+	</div>
+</footer>
 
   </body>
 </html>
